--- a/src/Styles/Reg.css
+++ b/src/Styles/Reg.css
@@ -8,7 +8,6 @@ align-items: center;
 margin: auto;
 width: 80%;
 margin-top: 20px;
-
 }
 
 .card{
@@ -17,6 +16,7 @@ margin-top: 20px;
     padding: 20px;
     width: 80%;
     box-shadow: 5px 5px #888888;
+    align-self: center;
 
     
 }
